# JudgmentRate_Desktop_App

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
.github/workflows/: build.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: calculator.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  rate_fetcher.rs
src/components/: CalculatorTab.tsx  DbManagerTab.tsx  SettingsTab.tsx
